@@ -11,7 +11,7 @@
   "overlap": -0.1,
   "brightness": -0.05,
   "contrast": 0.05,
-  "max_colour_push": 1,
+  "max_colour_push": 0,
   "fosterise": true,
   "suppress_edge_fosterisation": true,
   "size": {
@@ -24,7 +24,8 @@
     { "angle": 45,
       "width": 64,
       "offset_x": 1,
-      "offset_y": -1
+      "offset_y": -2,
+      "joggle": 1.5
     }
   ]
 }
