@@ -21,17 +21,28 @@
   },
   "render_elevation": 30,
   "sprites": [
-    {
+    { 
       "angle": 45,
       "width": 64,
-      "offset_x": 0,
-      "offset_y": -2
+      "offset_y": -1
     },
-    {
+    { 
       "angle": 135,
       "width": 64,
-      "offset_x": 0,
-      "offset_y": -3
+      "offset_y": -2,
+      "joggle": 2.0
+    },
+    { 
+      "angle": 225,
+      "width": 64,
+      "offset_y": -100,
+      "flip": false
+    },
+    { 
+      "angle": 315,
+      "width": 64,
+      "offset_y": -100,
+      "flip": false
     }
   ]
 }
