@@ -1,78 +1,3 @@
-// Ground and slope tiles
-template ground_tile(x, y, m, t) { [x*m, (y+8)*m, 64*m, 31*m, (t-31)*m, (-t*m)+(m/2)] }
-template ground_tile_u(x, y, m, t, u) { [x*m, (y+8)*m, 64*m, 31*m, (t-31)*m, (u*m)+(m/2)] }
-
-template ground_tile_slope(x, y, m, t, u, v) { [x*m, y*m, 64*m, 39*m, -(31+u)*m, ((v-7)*m)-(m/2)-t] }
-
-template bridge_ground_tile(x, y, m, t, u) { [x*m, (y+8)*m, 64*m, 31*m, -(31+t)*m, (u*m)+(m/2)] }
-
-
-// Tracks with ballast
-template tmpl_straight_y_m(y,m) {
-    ground_tile(0, y, m, 0)
-    ground_tile(72, y, m, 1)
-}
-
-template tmpl_bridge_straight_y_m(y,m) {
-    bridge_ground_tile(0, y, m, 1, 0)
-    bridge_ground_tile(72, y, m, -2, -1)
-}
-
-
-template tmpl_slope_y_m(y, m, t, u) {
-    ground_tile_slope(0, y, m, 0, 0, 0)
-    ground_tile_slope(72, y, m, 1, 0, t == 1 ? -1 : -1)
-    ground_tile_slope(144, y, m, 0, u == 1 ? 1 : 0, 0)
-    ground_tile_slope(216, y, m, m==1 ? 2 : 1, u == 1 && m != 1 ? -1 : 0, -1)
-}
-
-template tmpl_diagonal_y_m(y,m) {
-    ground_tile(72,  y+43, m, 0)
-    ground_tile(0,   y, m, 0)
-    ground_tile(216, y, m, 0)
-    ground_tile(0,   y+43, m, 0)
-}
-
-// Ballast underlays
-template tmpl_crossing_underlays(m) {
-    ground_tile(72, 387, m, 0)
-    ground_tile(216, 387,m, 0)
-    ground_tile(0, 387,m, 0)
-    ground_tile(144, 387,m, 0)
-    ground_tile_u(0, 430,m, 0, 0)
-}
-
-template tmpl_underlay_railtypes(m) {
-    tmpl_straight_y_m(0, m)
-    tmpl_diagonal_y_m(43, m)
-    tmpl_slope_y_m(172,m,0,0)
-
-    // X-crossing
-    ground_tile_u(0, 258, m, 0, 0)
-
-    tmpl_crossing_underlays(m)
-}
-
-// Tracks without ballast
-template tmpl_overlay_railtypes(m) {
-    tmpl_straight_y_m(215, m)
-    tmpl_diagonal_y_m(301, m)
-    tmpl_slope_y_m(172,m,0,0) // only used to show track reservations
-}
-
-// Bridges
-template tmpl_bridges_underlay(m) {
-    tmpl_bridge_straight_y_m(473, m)
-    tmpl_slope_y_m(129,m,1,1)
-    //tmpl_diagonal_y_m(215, m)
-}
-
-// Tracks in tunnels
-template tmpl_tunnel_tracks(m) {
-    tmpl_straight_y_m(0, m)
-    tmpl_straight_y_m(0, m)
-}
-
 // Depots
 template tmpl_depot(m) {
     [93*m,  243*m, 15*m,  13*m,  10*m,    (2*m)-(m/2) ] // \ rear wall
@@ -124,7 +49,7 @@ template tmpl_fences(y, m) {
      [ ((2*72)+30)*m, (y)*m,       4*m, 39*m,   -1*m,  (-23*m)-(m/2)] //  | (right)
      [ ((3*72)+ 0)*m, (y+5)*m,    64*m, 15*m,  -30*m,  (-14*m)-(m/2)] //  _ (bottom)
      [ ((2*72)+15)*m, (y+43)*m,   34*m, 35*m,  -32*m,  (-15*m)-(m/2)] //  / uphill (top)
-     [ ((1*72)+15)*m, (y+43)*m,   34*m, 35*m,    1*m,  (-15*m)-(m/2)] //  \ uphill (top)
+     [ ((1*72)+15)*m, (y+43)*m,   34*m, 35*m,    1*m,  (-16*m)-(m/2)] //  \ uphill (top)
      [ ((0*72)+15)*m, (y+43)*m,   34*m, 35*m,  -32*m,  (-15*m)-(m/2)] //  / downhill (top)
      [ ((3*72)+15)*m, (y+43)*m,   34*m, 35*m,    1*m,  (-15*m)-(m/2)] //  \ downhill (top)
 
@@ -133,7 +58,7 @@ template tmpl_fences(y, m) {
      [ ((2*72)+30)*m, (y)*m,       4*m, 39*m,    2*m,  (-23*m)-(m/2)] //  |   (left)
      [ ((3*72)+ 0)*m, (y+5)*m,    64*m, 15*m,  -30*m,  (-12*m)-(m/2)] //  _   (top)
      [ ((2*72)+15)*m, (y+43)*m,   34*m, 35*m,  -31*m,  (-15*m)-(m/2)] //  / uphill
-     [ ((1*72)+15)*m, (y+43)*m,   34*m, 35*m,    0*m,  (-15*m)-(m/2)] //  \ uphill
+     [ ((1*72)+15)*m, (y+43)*m,   34*m, 35*m,    0*m,  (-16*m)-(m/2)] //  \ uphill
      [ ((0*72)+15)*m, (y+43)*m,   34*m, 35*m,  -31*m,  (-15*m)-(m/2)] //  / downhill
      [ ((3*72)+15)*m, (y+43)*m,   34*m, 35*m,    0*m,  (-15*m)-(m/2)] //  \ downhill
 }
